# file-sanitizer

./: CHANGELOG.md  CLONE_FEATURES.md  Dockerfile  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT.md  PROJECT_MEMORY.md  README.md  RELEASE.md  ROADMAP.md  UPDATE.md  pyproject.toml
docs/: report.md  report.schema.json
scripts/: bench_sanitize.py
src/file_sanitizer/: cli.py  sanitizer.py  version.py
tests/: test_fixtures.py  test_sanitizer.py  test_smoke.py
